Bug 234703 mClassInfoFlags is always 0 instead of using the XPCWrappedNativeProto(..., ClassInfoFlags, ...) value r=jst sr=bz moa=dbradley